--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
 <body>
   <!-- navigation -->
   <header>
-    <nav class="navbar navbar-expand-md  fixed-top mb-5">
+    <nav class="navbar navbar-expand-md">
       <div class="container">
         <a class="navbar-brand" href="index.html"><img class="img-fluid" src="homepageimages/vmart_store-logo.png"
             alt="" width="130px">
@@ -146,7 +146,6 @@
 
 
   <main role="main">
-   <section class="role-main-section">
     <section class="main-profile-wrapper-body">
       <div class="container">
         <div class="profile-area">
@@ -158,26 +157,6 @@
               <h6 class="name">Vijay.</h6>
               <span class="profile-detail-id">ID 02123141</span>
             </div>
-            <a href="edit-profile.html" class="edit-profile ms-auto">
-              <i class="fa-solid fa-ellipsis-vertical"></i>
-            </a>
-          </div>
-
-          <div class="content-box">
-            <ul class="row p-0">
-              <li class="col-lg-3 col-md-6 col-6">
-                <a href="">
-                  <button class="bn632-hover bn18 "><i class="fa-solid fa-user-pen mx-2"></i>Order</button>
-                </a>
-              </li>
-              <li class="col-lg-3 col-md-6 mb-3 col-6 ">
-                <a href=""><button class="bn632-hover bn18 "><i class="fa-solid fa-heart mx-2"></i>Wishlist</button></a>
-              </li>
-              <li class="col-lg-3 mb-2 col-md-12 col-12 ">
-                <a href="my-coupan.html"><button class="bn632-hover bn18 "><i
-                      class="fa-solid fa-headphones mx-2"></i>Coupons</button></a>
-              </li>
-            </ul>
           </div>
           <hr>
           <div class="title-bar">
@@ -246,9 +225,8 @@
         </div>
       </div>
     </section>
-   </section>
-  </main>
 
+  </main>
 
   <!-- footer-section -->
 
@@ -293,7 +271,7 @@
                   <a class="nav-link active" href="categories.html">Category</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">CONTACT</a>
+                  <a class="nav-link active" href="contact-us.html">CONTACT</a>
                 </li>
               </ul>
             </div>
@@ -357,7 +335,7 @@
             <a href=""> BRANDS</a>
             <a href="">CASES</a>
             <a href=""> CABLES</a>
-            <a href=""> CABLES</a>
+            <a href=""> SHIRT</a>
           </div>
 
           <div class="footer-contact-details-body pt-2 ">
@@ -421,7 +399,7 @@
       <div class="row text-center">
         <div class="col-lg-4 col-md-6 my-2 col-12">
           <p>
-            © 2015 All rights reserved. Development by <a class="agency-copy" href="">Vijayyadav</a>
+            © 2024 All rights reserved. Development by <a class="agency-copy" href="">Vijay.Yadav</a>
           </p>
         </div>
         <div class="col-lg-4 mb-2 col-md-6 col-12">
@@ -445,6 +423,7 @@
 
 
   </footer>
+
 
 
 
