--- a/index.html
+++ b/index.html
@@ -1943,13 +1943,13 @@
                   <a class="nav-link active" href="profile.html">Profile</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">BLOGS</a>
+                  <a class="nav-link active" href="blog.html">BLOGS</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="categories.html">Category</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">CONTACT</a>
+                  <a class="nav-link active" href="contact-us.html">CONTACT</a>
                 </li>
               </ul>
             </div>
