--- a/Our-Team.html
+++ b/Our-Team.html
@@ -9,131 +9,54 @@
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
+  <script src="js/jquery.min.js">
+  </script>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-md mb-5">
-      <div class="container">
+    <nav class="navbar navbar-expand-md   mb-5">
+      <div class="container-fluid">
         <a class="navbar-brand" href="index.html"><img class="img-fluid" src="homepageimages/vmart_store-logo.png"
-            alt="" width="130px" height="200px"></a>
+            alt="" width="130px">
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <i class="fa-solid fa-bars text-white"></i><span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Home
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="https://vijay1234667.github.io/Landwind.Css-Page/">Page1</a></li>
-                <li><a class="dropdown-item" href="https://vijay1234667.github.io/Asmelhore-lander/">Page2</a></li>
-                <li><a class="dropdown-item" href="https://vijay1234667.github.io/Landing-Page/">Page3</a></li>
-                <li><a class="dropdown-item" href="https://vijay1234667.github.io/Wooder-carpenter-page/">Page4</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Shop
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="categories.html" id="navbarDropdown" role="button"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                Daily Deals
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="categories.html">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="cart.html" id="navbarDropdown" role="button"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                Blog
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="cart.html">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="my-coupan.html" id="navbarDropdown" role="button"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                Page
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="my-coupan.html">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Portfolio
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Portfolio1</a></li>
-                <li><a class="dropdown-item" href="#">Portfolio2</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Portfolio3</a></li>
-              </ul>
-            </li>
+            <a href=""><i class="fa-solid fa-bars fs-5"></i></a>
           </ul>
-          <form class="d-flex search-body m-auto">
-            <input class="form-control me-2" list="datalistOptions" placeholder="Search, Brand,Product....">
-            <datalist id="datalistOptions">
-              <option value="Tshirt"></option>
-              <option value="shirt"></option>
-              <option value="Laptop"></option>
-              <option value="MenTshirt"></option>
-              <option value="Shoes"></option>
-              </section>
-            </datalist>
-            <div>
-              <a href="" class="btn"><i class="fa-solid fa-magnifying-glass text-white"></i></a>
+          <div class="d-flex ms-auto position-relative">
+            <div class="">
+              <input class="form-control" list="datalistOptions" placeholder="Search, Brand,Product....">
             </div>
-          </form>
+            <div class="position-absolute top-0 end-0">
+              <a href="" class="btn "><i class="fa-solid fa-magnifying-glass dark"></i></a>
+            </div>
+          </div>
 
-          <ul class="navbar-nav nav-brand-icons">
-            <li class="nav-item">
-              <a href="profile.html"><i class="fa-solid fa-user  p-2"></i>
+          <ul class="navbar-nav nav-brand-icons m-auto">
+            <li class="login-btn px-2">
+              <a href=""><a href="" class="btn"><span><i class="fa-solid fa-user px-1"></i></span>Login</a>
               </a>
             </li>
-            <li class="nav-item">
-              <a href=""><i class="fa-solid fa-cart-shopping p-2 "></i>
-              </a>
+
+            <li class="login-btn Track-Order px-1 px-3 position-relative">
+              <a href="" class="btn">Track Order</a>
+              <span 
+              class="position-absolute top-0 strat-0   translate-middle badge rounded-pill bg-danger">
+              <i class="fa-solid fa-truck"></i></span>
             </li>
-            <li class="login-btn mx-1">
-              <a href="profile.html"><a href="" class="btn">Login</a>
-              </a>
+            
+            <li class="login-btn Cart position-relative px-2">
+              <a href="" class="btn">Cart</a>
+              <span
+                class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">2+</i></span>
             </li>
           </ul>
         </div>
@@ -152,7 +75,7 @@
     .top-fixed-section {
       color: white;
       background: url(homepageimages/Group\ 48095504\ footer-bg.svg);
-      padding: 50px 0px 50px;
+      padding: 20px 0px 20px;
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
@@ -190,7 +113,7 @@
             <h1>OUR TEAM</h1>
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb  breadcrumb-text-center">
-                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                 <li class="breadcrumb-item "><a href="">Library</a></li>
               </ol>
             </nav>
@@ -214,7 +137,7 @@
           </div>
 
           <div class="row">
-            <div class="col-lg-4 col-sm-6">
+            <div class="col-lg-4 col-sm-6 animate__animated animate__fadeInLeft">
               <div class="card">
                 <img class="img-fluid rounded-circle card-img-top" src="homepageimages/Vanessa laird.jpg" alt="">
                 <div class="card-body text-center">
@@ -224,7 +147,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-sm-6">
+            <div class="col-lg-4 col-sm-6 animate__animated animate__fadeInDown">
               <div class="card">
                 <img class="img-fluid rounded-circle card-img-top" src="homepageimages/Irea Evans.jpg" alt="">
                 <div class="card-body text-center">
@@ -235,7 +158,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-sm-6">
+            <div class="col-lg-4 col-sm-6 animate__animated animate__fadeInRight">
               <div class="card">
                 <img class="img-fluid rounded-circle card-img-top" src="homepageimages/Mason Campbell.jpg" alt="">
                 <div class="card-body text-center">
@@ -246,18 +169,18 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-sm-6">
+            <div class="col-lg-4 col-sm-6 animate__animated animate__fadeInLeft">
               <div class="card">
                 <img class="img-fluid rounded-circle card-img-top" src="homepageimages/Natasha Malkova.jpg" alt="">
                 <div class="card-body text-center">
                   <h4>Natasha Malkova</h4>
                   <h6>FRONT END CODER</h6>
-                  <a class="text-dark" href=""><span><i
+                  <a class="text-info" href=""><span><i
                         class="fa-brands fa-github mx-1"></i></i></span>natashamalkova</a>
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-sm-6">
+            <div class="col-lg-4 col-sm-6 animate__animated animate__fadeInUp">
               <div class="card">
                 <img class="img-fluid rounded-circle card-img-top" src="homepageimages/Eva Mendes.jpg" alt="">
                 <div class="card-body text-center">
@@ -267,7 +190,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-sm-6">
+            <div class="col-lg-4 col-sm-6 animate__animated animate__fadeInRight">
               <div class="card">
                 <img class="img-fluid rounded-circle card-img-top" src="homepageimages/Olivia Taylor.jpg" alt="">
                 <div class="card-body text-center">
@@ -324,7 +247,7 @@
                   <a class="nav-link active" href="profile.html">Profile</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">BLOGS</a>
+                  <a class="nav-link active" href="blog.html">BLOGS</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="categories.html">Category</a>
@@ -340,7 +263,7 @@
                   <a class="nav-link active" href="#">LOGIN</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">REGISTRATION</a>
+                  <a class="nav-link active" href="Registration.html">REGISTRATION</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="#">SERVICES</a>
@@ -476,6 +399,16 @@
     </div>
   </footer>
   <script src="js/bootstrap.bundle.js"></script>
+  <script src="js/aos.js"></script>
+
+
+
+  <script>
+    AOS.init({
+      easing: 'ease-out-back',
+      duration: 1000
+    });
+  </script>
 
 </body>
 
