--- a/add-to-cart.html
+++ b/add-to-cart.html
@@ -25,7 +25,7 @@
 
   <header>
     <nav class="navbar navbar-expand-md  fixed-top mb-5">
-      <div class="container">
+      <div class="container-fluid">
         <a class="navbar-brand" href="index.html"><img class="img-fluid" src="homepageimages/vmart_store-logo.png"
             alt="" width="130px">
         </a>
@@ -35,109 +35,35 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Home
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="https://vijay1234667.github.io/Landwind.Css-Page/">Page1</a></li>
-                <li><a class="dropdown-item" href="https://vijay1234667.github.io/Asmelhore-lander/">Page2</a></li>
-                <li><a class="dropdown-item" href="https://vijay1234667.github.io/Landing-Page/">Page3</a></li>
-                <li><a class="dropdown-item" href="https://vijay1234667.github.io/Wooder-carpenter-page/">Page4</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Shop
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Daily Deals
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="cart.html" id="navbarDropdown" role="button"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                Blog
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="cart.html">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="my-coupan.html" id="navbarDropdown" role="button"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                Page
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="my-coupan.html">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Portfolio
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Portfolio1</a></li>
-                <li><a class="dropdown-item" href="#">Portfolio2</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Portfolio3</a></li>
-              </ul>
-            </li>
+            <a href=""><i class="fa-solid fa-bars fs-5"></i></a>
           </ul>
-
-          <div class="d-flex m-auto">
-            <input class="form-control" list="datalistOptions" placeholder="Search, Brand,Product....">
-            <a href="" class="btn"><i class="fa-solid fa-magnifying-glass text-white"></i></a>
+          <div class="d-flex ms-auto position-relative">
+            <div class="">
+              <input class="form-control" list="datalistOptions" placeholder="Search, Brand,Product....">
+            </div>
+            <div class="position-absolute top-0 end-0">
+              <a href="" class="btn "><i class="fa-solid fa-magnifying-glass dark"></i></a>
+            </div>
           </div>
 
-          <ul class="navbar-nav nav-brand-icons">
-            <li class="nav-item">
-              <a href="profile.html"><i class="fa-solid fa-user p-2"></i>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href=""><i class="fa-solid fa-cart-shopping p-2"></i>
+          <ul class="navbar-nav nav-brand-icons m-auto">
+            <li class="login-btn px-2">
+              <a href=""><a href="" class="btn"><span><i class="fa-solid fa-user px-1"></i></span>Login</a>
               </a>
             </li>
 
-            <li class="login-btn mx-1">
-              <a href=""><a href="" class="btn">Login</a>
-              </a>
+            <li class="login-btn Track-Order px-1 px-3 position-relative">
+              <a href="" class="btn">Track Order</a>
+              <span 
+              class="position-absolute top-0 strat-0   translate-middle badge rounded-pill bg-danger">
+              <i class="fa-solid fa-truck"></i></span>
             </li>
-
+            
+            <li class="login-btn Cart position-relative px-2">
+              <a href="" class="btn">Cart</a>
+              <span
+                class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">2+</i></span>
+            </li>
           </ul>
         </div>
       </div>
@@ -253,10 +179,18 @@
             <h6 class="title-top-para">Women Pink & Off-White Printed Kurta with Palazzos...</h6>
             <hr>
             <div>
-              <h6><span class="text-dark fs-3"><span>&#8377;</span>458</span> <span
+              <h6>
+                <span class="text-dark fs-3"><span>&#8377;</span id="increaseprice">458</span> <span
                   class="text-secondary fs-5 mx-2"><del><span>&#8377;</span>1089</del></span> <span
-                  class="text-danger fs-5">(70% off)</span></h6>
-              <p class="text-success fw-bold font-monospace">inclusive of all taxes</p>
+                  class="text-danger fs-5">(70% off)</span>
+                </h6>
+              <p class="text-success fw-bold font-monospace">Add Item Here</p>
+              <div class="d-flex ms-auto align-items-end plus-minus mb-3">
+                <button class="value-button decrease-button" onclick="decreaseValue(this)" title="Azalt">-</button>
+                <a href="" class="number">0</a>
+                <button class="value-button increase-button" ondblclick="myPriceAdd()" onclick="increaseValue(this, 5)"
+                  title="Arrtır">+</button>
+              </div>
             </div>
             <div class="mb-3">
               <h6>More Colors..</h6>
@@ -334,11 +268,11 @@
             <div class="mb-3">
               <div class="add-to-carts-featured-products-add-tobag-whishlist-btn">
                 <div class="mb-2">
-                  <a class="btn btn-1 w-75" href=""><i class="fa-solid fa-cart-plus mx-2"></i>Buy Now</a>
+                  <a class="btn btn-1 w-75" href="cart.html"><i class="fa-solid fa-cart-plus mx-2"></i>Buy Now</a>
                 </div>
                 <div>
                   <a class="btn w-75 btn-1" href=""><i class="fa-solid fa-heart  mx-2"></i>Add To
-                    Cart</a></button>
+                    whishlist</a></button>
                 </div>
               </div>
             </div>
@@ -547,7 +481,7 @@
                   <a class="nav-link active" href="profile.html">Profile</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">BLOGS</a>
+                  <a class="nav-link active" href="blog.html">BLOGS</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="categories.html">Category</a>
@@ -563,7 +497,7 @@
                   <a class="nav-link active" href="#">LOGIN</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">REGISTRATION</a>
+                  <a class="nav-link active" href="Registration.html">REGISTRATION</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="#">SERVICES</a>
@@ -735,6 +669,33 @@
 
 
 
+  <script>
+    function increaseValue(button, limit) {
+      const numberInput = button.parentElement.querySelector('.number');
+      var value = parseInt(numberInput.innerHTML, 10);
+      if (isNaN(value)) value = 0;
+      if (limit && value >= limit) return;
+      numberInput.innerHTML = value + 1;
+    }
+
+    function decreaseValue(button) {
+      const numberInput = button.parentElement.querySelector('.number');
+      var value = parseInt(numberInput.innerHTML, 10);
+      if (isNaN(value)) value = 0;
+      if (value < 1) return;
+      numberInput.innerHTML = value - 1;
+    }
+  </script>
+
+
+
+
+
+  <script>
+    function myPriceAdd() {
+      document.getElementById("increaseprice").innerHTML += "Hello World ";
+    }
+  </script
 
 
 
