--- a/cart.html
+++ b/cart.html
@@ -76,134 +76,41 @@
 
   <section class="main-top-cart-delivery-section">
     <div class="container">
-      <div class="main-top-cart-delivery d-flex mb-3 pt-2">
-        <div class="d-flex align-items-center justify-content-center">
-          <img class="img-fluid rounded-circle" width="40px" src="homepageimages/Albert Flores.jpg" alt="">
-          <p class="my-1 mx-2">Delivery to Vijay</p>
-        </div>
-        <div class="ms-auto">
-          <p>Powai Mumbai</p>
-        </div>
-      </div>
-
-      <div class="cart-white-bg-section mb-3">
-        <div class="d-flex justify-content-between align-items-center">
-          <div class="d-flex">
-            <img class="img-fluid" width="80px" src="img/k1.webp" alt="">
-            <div class="mx-2 cart-white-bg-body ">
-              <h6 class="fw-bold">Peter England Casual</h6>
-              <p>Peter Longline Pure Cotten Tshirt</p>
-              </h5>
-              <div class="cart-pricing-btn">
-                <div class="buy-now-btn">
-                  <a href="index.html" class="btn ">See More</a>
-                </div>
-                <!-- <div class="add-to-cart">
-                  <a href="" class="btn ">Add Item</a>
-                </div> -->
-              </div>
-            </div>
-          </div>
-          <div class="d-flex align-items-end plus-minus">
-            <button class="value-button decrease-button" onclick="decreaseValue(this)" title="Azalt">Remove</button>
-            <a href="" class="number">0</a>
-            <button class="value-button increase-button" onclick="increaseValue(this, 5)" title="Arrtır">Add More</button>
-          </div>
-          <div>
-            <h5 class="pricing"><span>&#8377;</span>158.15 <del class="text-success"><span>&#8377;</span>200.10</del>
-              <h6 class="text-center text-success">Total-Price</h6>
-          </div>
-        </div>
-      </div>
-      
-      <!-- <div class="cart-white-bg-section mb-3">
-        <div class="d-flex justify-content-between align-items-center">
-          <div class="d-flex">
-            <img class="img-fluid" width="80px" src="img/k6.webp" alt="">
-            <div class="mx-2 cart-white-bg-body ">
-              <h6 class="fw-bold">Peter England Casual</h6>
-              <p>Peter Longline Pure Cotten Tshirt</p>
-              </h5>
-              <div class="cart-pricing-btn">
-                <div class="buy-now-btn">
-                  <a href="" class="btn ">Buy Now</a>
-                </div>
-                <div class="add-to-cart">
-                  <a href="" class="btn ">Add To Cart</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="d-flex align-items-end plus-minus">
-            <button class="value-button decrease-button" onclick="decreaseValue(this)" title="Azalt">-</button>
-            <a href="" class="number">0</a>
-            <button class="value-button increase-button" onclick="increaseValue(this, 5)" title="Arrtır">+</button>
-          </div>
-          <div>
-            <h5 class="pricing"><span>&#8377;</span>158.15 <del class="text-success"><span>&#8377;</span>200.10</del>
-              <h6 class="text-center text-success">Price-details</h6>
-          </div>
-        </div>
-      </div>
-      <div class="cart-white-bg-section mb-3">
-        <div class="d-flex justify-content-between align-items-center">
-          <div class="d-flex">
-            <img class="img-fluid" width="80px" src="img/k2.webp" alt="">
-            <div class="mx-2 cart-white-bg-body ">
-              <h6 class="fw-bold">Peter England Casual</h6>
-              <p>Peter Longline Pure Cotten Tshirt</p>
-              </h5>
-              <div class="cart-pricing-btn">
-                <div class="buy-now-btn">
-                  <a href="" class="btn ">Buy Now</a>
-                </div>
-                <div class="add-to-cart">
-                  <a href="" class="btn ">Add To Cart</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="d-flex align-items-end plus-minus">
-            <button class="value-button decrease-button" onclick="decreaseValue(this)" title="Azalt">-</button>
-            <a href="" class="number">0</a>
-            <button class="value-button increase-button" onclick="increaseValue(this, 5)" title="Arrtır">+</button>
-          </div>
-          <div>
-            <h5 class="pricing"><span>&#8377;</span>158.15 <del class="text-success"><span>&#8377;</span>200.10</del>
-              <h6 class="text-center text-success">Price-details</h6>
-          </div>
-        </div>
-      </div>
-      <div class="cart-white-bg-section mb-3">
-        <div class="d-flex justify-content-between align-items-center">
-          <div class="d-flex">
-            <img class="img-fluid" width="80px" src="img/cart2.jpg" alt="">
-            <div class="mx-2 cart-white-bg-body ">
-              <h6 class="fw-bold">Peter England Casual</h6>
-              <p>Peter Longline Pure Cotten Tshirt</p>
-              </h5>
-              <div class="cart-pricing-btn">
-                <div class="buy-now-btn">
-                  <a href="" class="btn ">Buy Now</a>
-                </div>
-                <div class="add-to-cart">
-                  <a href="" class="btn ">Add To Cart</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="d-flex align-items-end plus-minus">
-            <button class="value-button decrease-button" onclick="decreaseValue(this)" title="Azalt">-</button>
-            <a href="" class="number">0</a>
-            <button class="value-button increase-button" onclick="increaseValue(this, 5)" title="Arrtır">+</button>
-          </div>
-          <div>
-            <h5 class="pricing"><span>&#8377;</span>158.15 <del class="text-success"><span>&#8377;</span>200.10</del>
-              <h6 class="text-center text-success">Price-details</h6>
-          </div>
-        </div>
-      </div> -->
+      <table class="table table-bordered caption-top">
+        <caption><h6 class="fw-bold">CART</h6></caption>
+        <thead  class="text-center">
+          <tr>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col">Product</th>
+            <th scope="col">Price</th>
+            <th scope="col">Quantity</th>
+            <th scope="col">SubTotal</th>
+          </tr>
+        </thead>
+        <tbody class="text-center">
+          <tr>
+            <th>1</th>
+            <td><img class="img-fluid" src="/homepageimages/sh1.jpeg" width="50px" height="40px" alt=""></td>
+            <td>Slogan cotton print t-shirt</td>
+            <td><span>&#8377;</span>70.00</td>
+            <td><input type="number"></td>
+            <td><span>&#8377;</span>70.00</td>
+          </tr>
+          <tr>
+            <th>2</th>
+            <td><img class="img-fluid" src="/homepageimages/addtocatc5.png" width="50px" height="40px" alt=""></td>
+            <td>Slogan cotton print t-shirt</td>
+            <td><span>&#8377;</span>70.00</td>
+            <td><input type="number"></td>
+            <td><span>&#8377;</span>70.00</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
+
+
+   
   </section>
 
   <section class="payment-summary-section">
